# hw

./: README.md  client.py  server.py
lab1a/: README.md
lab1a/200-petrov.vd/: 202-chernyshev.yan  README.md
lab1a/201-Puchkina.VA/: rep.txt
lab1a/201-ShelaevN/: Example1.txt  README.md  TCP_chat_client.py  TCP_chat_server_sync.py
lab1a/201-Ulyanov.aa/: .gitignore  README.md  client.py  server.py
lab1a/201-bojtsov.iv/: Cargo.toml  README.md
lab1a/201-bojtsov.iv/async_room/: Cargo.toml
lab1a/201-bojtsov.iv/async_room/src/: main.rs
lab1a/201-bojtsov.iv/client/: Cargo.toml
lab1a/201-bojtsov.iv/client/src/: event.rs  main.rs
lab1a/201-bojtsov.iv/src/: async_room.rs  lib.rs  room_client.rs  room_common.rs  sync_room.rs
lab1a/201-bojtsov.iv/sync_room/: Cargo.toml
lab1a/201-bojtsov.iv/sync_room/src/: main.rs
lab1a/201-dinmukhametov.ml/: README.md
lab1a/201-ivanov.is/: repo.txt
lab1a/201-lyashenko.vv/: README.md
lab1a/201-matveets.av/: client.py  server.py
lab1a/201-petrov.vd/: README.md  client_blocking.py  server_blocking.py
lab1a/201-sakhibgareev.rr/: README.md
lab1a/202-keita.as/: README.md
lab1a/202-kobyzhev.am/: README.md
lab1a/202-likholetov.md/: README.md
lab1a/202-lunyak.na/: README.md
lab1a/202-ruban.sd/: .editorconfig  README.md  build.gradle.kts  settings.gradle.kts
lab1a/202-sherepa.nm/: README.md
lab1a/202-smirnov.ld/: Report.md  client.py  utils.py
lab1a/202-sukhachev.na/: README.md
lab1b/: 201-nazarov.dyu  202-samsonov.si  README.md
lab2/: 201-nazarov.dyu  README.md
lab3/: README.md  repository_link.txt
(+283 files in other folders)
