[package]
name = "tcp-chat"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] } 
regex = "1"
tokio = { version = "1", features = ["full"] }
num_enum = "0.5"
tempfile = "3"
object-pool = "0.5"
lazy_static = "1.4"

[workspace]
members = [
    "sync_room",
    "async_room",
    "client",
]