[package]
name = "client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
tcp-chat = { version = "0.1", path = "../" }
tui = "0.16"
termion = "1"
regex = "1"
chrono = "0.4"
lazy_static = "1"